src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>AnswerText__c</fullName>
        <label>Answer Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CorrectAnswers__c</fullName>
        <label>Correct Answers</label>
        <summaryFilterItems>
            <field>Answer__c.IsCorrect__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Answer__c.Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CorrectWeight__c</fullName>
        <label>Correct Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncorrectWeight__c</fullName>
        <label>Incorrect Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MetadataAnswer__c</fullName>
        <label>Metadata Answer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PenaltyPerAttempt__c</fullName>
        <label>Penalty per Attempt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShuffleAnswers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shuffle Answers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalAnswers__c</fullName>
        <label>Total Answers</label>
        <summaryForeignKey>Answer__c.Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fill in the Blanks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Options</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CorrectWeightRange</fullName>
        <active>true</active>
        <description>The Correct Weight must be greater than 0.</description>
        <errorConditionFormula>CorrectWeight__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>CorrectWeight__c</errorDisplayField>
        <errorMessage>The correct weight must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LimitOfAnswers</fullName>
        <active>true</active>
        <description>If the question type is &quot;Statement&quot; no more than two answers can be created.</description>
        <errorConditionFormula>AND( TEXT(Type__c)  = &apos;Statement&apos;,  TotalAnswers__c &gt; 2)</errorConditionFormula>
        <errorMessage>For &quot;Statement&quot; questions, no more than two answers can be created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LimitOfCorrectAnswers</fullName>
        <active>true</active>
        <description>If the question type is &quot;Single choice&quot; or &quot;Statement&quot; only one answer can be marked as &quot;IsCorrect&quot;.</description>
        <errorConditionFormula>AND( OR( TEXT(Type__c)  = &apos;Single Choice&apos;, TEXT(Type__c)   = &apos;Statement&apos; ) , CorrectAnswers__c &gt; 1)</errorConditionFormula>
        <errorMessage>For &quot;Single Choice&quot; and &quot;Statement&quot; questions, only one answer can be marked as correct.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PenaltyPerAttemptRange</fullName>
        <active>true</active>
        <description>Penalty per attempt must have a value  between 0 and 100.</description>
        <errorConditionFormula>OR( PenaltyPerAttempt__c &lt;0, PenaltyPerAttempt__c &gt; 1)</errorConditionFormula>
        <errorMessage>The penalty per attempt must have a value  between 0 and 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QuestionTextRequired</fullName>
        <active>true</active>
        <description>Question text is required.</description>
        <errorConditionFormula>ISBLANK( QuestionText__c )</errorConditionFormula>
        <errorDisplayField>QuestionText__c</errorDisplayField>
        <errorMessage>The question text is required.</errorMessage>
    </validationRules>
</CustomObject>